# fiber-config-generator

./: .gitattributes  .gitignore  .python-version  CITATION.cff  README.md  requirements.txt  setup.cfg  voxsim_requirements.txt
.github/: CODEOWNERS  issue-branch.yml
.github/ISSUE_TEMPLATE/: dependent-issue.md
.github/PULL_REQUEST_TEMPLATE/: dependent-pull-request.md
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  create-issue-branch.yml  dependent-issues.yml  organize-github.yml  static-analysis.yml  sync-linum-mirror-repo.yml
doc/: conception.md  conventions.md  dev-conventions.md  development.md  glossary.md  references.md  research.md  voxsim.md
fcg/: typing.py
fcg/app/: __init__.py  _app.py  _fiber.py
fcg/config/voxsim/: world.py
fcg/microscopy/: __init__.py  _iscat_movie_gen.py  _iscat_movie_sim.py  _psf.py  _tract.py
fcg/todo_some_package/: __init__.py  todo_some_module.py
fcg/typing/: __init__.py  _typing.py
fcg/utils/introspection/: caller.py  macro.py
fcg/voxsim/: default.py  world.py
fcg/voxsim/cli/: default.py
fcg/voxsim/fiber/: const.py  generator.py
report/: arxiv.sty  references.bib  report.tex
report/template/: template.tex
resources/psf/: default_psf_config.txt
scripts/: generate_config.py  generate_fiber_config.py  generate_microscope_img.py  main.py  sim_microscope_3d_acquisition.py  simulation_factory.py  simulation_runner.py
scripts/todo_some_package/: __init__.py  todo_some_module.py
tests/todo_some_package/: test_todo_some_module.py
utils/: auto-dos2unix.sh  convert_eol.sh
(+38 files in other folders)
