[metadata]
name = cfg


; pylint options: https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html
[pylint.FORMAT]
max-line-length = 120


; flake8 options: https://flake8.pycqa.org/en/latest/user/options.html
; flake8 error codes: https://flake8.pycqa.org/en/latest/user/error-codes.html
[flake8]
max-line-length = 120
statistics = True
filename =
    scripts/**.py,
    tests/**.py
per-file-ignores =
; module imported but unused
    __init__.py: F401


; mypy configuration file: https://mypy.readthedocs.io/en/stable/config_file.html
; mypy error codes enabled by default: https://mypy.readthedocs.io/en/stable/error_code_list.html
; mypy error codes optionak checks: https://mypy.readthedocs.io/en/stable/error_code_list2.html
[mypy]
; Disallows defining functions without type annotations or with incomplete type annotations.
disallow_untyped_defs = True

; Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = True

; Shows a warning when encountering any code inferred to be unreachable or redundant after performing type analysis.
warn_unreachable = True

enable_error_code =
; Check that expression is not implicitly true in boolean context
    truthy-bool


; pytest API reference: https://docs.pytest.org/en/latest/reference/reference.html
[pytest]
pythonpath = fcg scripts
testpaths = tests